<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_nome">Nome Completo</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_usuario">Usuário</string>
    <string name="lbl_senha">Senha</string>

    <string name="menu_item_salvar">Salvar</string>
    <string name="menu_item_cancelar">Cancelar</string>
    <string name="title_activity_login_main">LoginMainActivity</string>

    OCORRENCIA
    <string name="menu_item_gravar">Gravar</string>
    <string name="menu_item_abortar">Abortar</string>

    LOGIN
    <string name="lbl_bemvindo">Bem vindo ao #UP</string>
    <string name="lbl_novocadastro">Iserir Novo Cadastro</string>
    <string name="title_activity_tela_inicial_main">TelaInicialMainActivity</string>
    <string name="title_activity_ocorrencia_pavimentacao_main">OcorrenciaPavimentacaoMainActivity
    </string>

</resources>
